# revolut-python

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  index.md  usage.md
docs/superpowers/specs/: 2026-06-20-revolut-python-design.md
src/revolut/: __init__.py  _version.py  client.py  config.py  exceptions.py  webhooks_verify.py
src/revolut/_http/: __init__.py  async_client.py  base.py  sync_client.py
src/revolut/models/: __init__.py  common.py  customer.py  dispute.py  location.py  order.py  payment.py  payment_method.py  payout.py  refund.py  report_run.py  subscription.py  webhook.py
src/revolut/resources/: __init__.py  base.py  customers.py  disputes.py  locations.py  orders.py  payment_methods.py  payments.py  payouts.py  refunds.py  report_runs.py  subscriptions.py  webhooks.py
tests/: conftest.py  test_config_exceptions.py  test_hardening.py  test_http.py  test_models.py  test_orders.py  test_other_resources.py  test_pagination.py  test_payment_methods.py  test_public_api.py  test_v06_resources.py  test_webhooks_verify.py
tests/integration/: test_sandbox.py
