[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revolut-merchant-py"
version = "0.1.0"
description = "Typed Python client for the Revolut Merchant API (sync + async)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Robert Ruben", email = "robert.benitez@treew.com" }]
keywords = ["revolut", "merchant", "payments", "api", "sdk", "fintech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24,<1",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/robertruben98/revolut-merchant-py"
Repository = "https://github.com/robertruben98/revolut-merchant-py"
Issues = "https://github.com/robertruben98/revolut-merchant-py/issues"
Changelog = "https://github.com/robertruben98/revolut-merchant-py/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/revolut"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["revolut"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/revolut"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
